--- a/eclipse-workspace/Lab 5 - Uniques and Dupes/.project
+++ b/eclipse-workspace/Lab 5 - Uniques and Dupes/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Union and Difference</name>
+	<name>Lab 5 - Uniques and Dupes</name>
 	<comment></comment>
 	<projects>
 	</projects>
