--- a/eclipse-workspace/Lab 6 - Random Writer/.project
+++ b/eclipse-workspace/Lab 6 - Random Writer/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Lab 6 - Histogram Writer</name>
+	<name>Lab 6 - Random Writer</name>
 	<comment></comment>
 	<projects>
 	</projects>
